--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,10 @@
     />
     <link rel='manifest' href='%PUBLIC_URL%/manifest.json' />
     <title>portfolio App</title>
+    <script src="https://kit.fontawesome.com/01db440c70.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div id='root'></div>
+    
   </body>
 </html>
