--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset='utf-8' />
     <!-- <link rel='icon' href='link for favicon here' /> -->
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name='viewport' content='width=device-width, initial-scale=1' />
     <meta name='theme-color' content='#000000' />
     <meta
       name='description'
-      content='Web site created using create-react-app'
+      content='hamids portfolio created using react'
     />
     <link rel='manifest' href='%PUBLIC_URL%/manifest.json' />
     <title>portfolio App</title>
